--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,27 +1,12 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body, #root {
+  min-height: 100vh;
+  max-height: 100vh;
+  max-width: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 
 @media all and (min-width: 480px) {
   .login {
@@ -33,3 +18,6 @@
     max-width: 320px;
   }
 }
+
+
+
