fixing no-op error on ChatWindow.js

--- a/src/styles/Messages.css
+++ b/src/styles/Messages.css
@@ -17,7 +17,7 @@
 
 .message.from-current-user .message-body {
     background-color: #007bff;
-    color: #eeeeee;
+    color: #FFFFFFFF;
 }
 
 .message {
