--- a/src/styles/Messages.css
+++ b/src/styles/Messages.css
@@ -10,13 +10,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 5px;
+    margin-bottom: 12px;
 }
 
 /*shared styling for message body*/
 .message-body-current-user, .message-body-other-user {
     display: inline-block;
-    padding: 15px;
+    /*padding: 15px;*/
+    padding: 10px;
     background-color: #eee;
     border: 1px;
     border-radius: 5px;
@@ -28,6 +29,7 @@
     background-color: #007bff;
     color: #FFFFFFFF
 }
+
 /*shared styling for timestamp*/
 .timestamp-current-user, .timestamp-other-user {
     min-width: 8%;
@@ -67,7 +69,6 @@
 }
 
 .message-body {
-    /*max-width: 80%;*/
     display: inline-block;
     padding: 15px;
     background-color: #eee;
