--- a/src/styles/Messages.css
+++ b/src/styles/Messages.css
@@ -5,6 +5,11 @@
     padding: 20px;
 }
 
+.message-content-container {
+    display: flex;
+    align-items: flex-end;
+}
+
 /*shared styling for message component*/
 .message-current-user, .message-other-user {
     display: flex;
