--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -35,7 +35,18 @@ html, body, #root {
 }
 
 .custom-file {
-  margin-top: 25px;
+  margin-top: 0;
 }
 
+label.custom-file-label {
+  color: #6c757d;
+}
 
+/*consolidated styling for form labels*/
+label.username-label.form-label, label.profile-label.form-label {
+  font-weight: bold;
+}
+
+label.profile-label.form-label {
+  margin-top: 30px;
+}
